--- a/web/index.html
+++ b/web/index.html
@@ -2,90 +2,120 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <title>Villa Mercedes Running Team</title>
+    <link rel="stylesheet" href="estilos.css" />
     <link
-      href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
-    <title>Villa Mercedes Running Team</title>
+    <link
+      href="https://unpkg.com/boxicons@2.0.5/css/boxicons.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header class="header" id="inicio">
-      <img src="./img/icons/bx-menu.svg" alt="" class="hamburguer" />
+      <img class="hamburguer" src="img/hamburguesa.svg" alt="" />
       <nav class="menu-navegacion">
         <a href="#inicio">Inicio</a>
-        <a href="#servicio">Servicios</a>
-        <a href="#galeria">Galeria</a>
-        <a href="#redes">Redes</a>
-        <a href="#contacto">Contacto</a>
+        <a href="#servicio">Servicio</a>
+        <a href="#galeria">Portafolio</a>
+        <a href="#expertos">Especializados</a>
+        <a href="#footer">Contacto</a>
       </nav>
       <div class="contenedor head">
-        <h1 class="titulo">rompe tus limites</h1>
-        <p class="copy">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-        </p>
+        <h1 class="titulo">Desafia Tus Propios Limites</h1>
+        <p class="copy">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
       </div>
     </header>
     <main>
       <section class="services contenedor" id="servicio">
-        <h2 class="subtitulo">Nuestros servicios</h2>
-        <div class="contenedor servicio">
-          <img src="./img/pictures/planer.svg" alt="Planificacion" />
+        <h2 class="subtitulo"></h2>
+        <div class="contenedor-servicio">
+          <img src="img/checklist.svg" alt="" />
           <div class="checklist-servicio">
             <div class="service">
-              <h3 class="n-service">
-                <span class="number">1</span> Planificacion Personalizada
-              </h3>
+              <h3 class="n-service"><span class="number">1</span>Mision</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Quibusdam fugiat eveniet vel? Saepe, maiores dolores.
+                El Equipo de Villa Mercedes Running Team, fue creado en Villa
+                Mercedes San Luis, Argentina con la misión de brindar un
+                servicio integral al deportista, generando un espacio de
+                entrenamiento, aprendizaje y disciplina. Aportando conocimientos
+                y recursos especializados. Comprometidos en brindarles las
+                herramientas necesarias para mejorar el rendimiento deportivo,
+                ya sea de manera profesional como recreativa en todos los
+                niveles. Sin dejar de lado, la contención social, y la actividad
+                física para enfrentar al sedentarismo
               </p>
             </div>
             <div class="service">
-              <h3 class="n-service">
-                <span class="number">2</span> Planificacion Personalizada
-              </h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Quibusdam fugiat eveniet vel? Saepe, maiores dolores.
-              </p>
+              <h3 class="n-service"><span class="number">2</span>Vision</h3>
+              <p>Ser reconocidos como equipo de trabajo a nivel nacional.</p>
             </div>
             <div class="service">
               <h3 class="n-service">
-                <span class="number">3</span> Planificacion Personalizada
+                <span class="number">3</span>Algunos de Nuestros Valores
               </h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Quibusdam fugiat eveniet vel? Saepe, maiores dolores.
+                • Autenticidad • Ética deportiva •Respeto mutuo •Responsablidad
+                •Profesionalismo •Sentido de pertenecia • Trabajo en equipo •
+                Inclusión e integración • Inspirar •Innovar •Crecer
               </p>
             </div>
           </div>
         </div>
       </section>
-      <section class="gallery" id="galeria"></section>
-      <div class="contenedor">
-        <h2 class="subtitulo"></h2>
-        <div class="contenedor-galeria">
-          <img src="./img/pictures/galery/m1.jpg" alt="img-galeria" />
-          <img src="./img/pictures/galery/m1.jpg" alt="img-galeria" />
-          <img src="./img/pictures/galery/m1.jpg" alt="img-galeria" />
-          <img src="./img/pictures/galery/m1.jpg" alt="img-galeria" />
-          <img src="./img/pictures/galery/m1.jpg" alt="img-galeria" />
-          <img src="./img/pictures/galery/m1.jpg" alt="img-galeria" />
+      <section class="gallery" id="galeria">
+        <div class="contenedor">
+          <h2 class="subtitulo">Galeria</h2>
+          <div class="contenedor-galeria">
+            <img
+              src="./img/pictures/galery/pic13.jpg"
+              class="img-galeria"
+              alt="Hola"
+            />
+            <img
+              src="./img/pictures/galery/pic12.jpg"
+              class="img-galeria"
+              alt=""
+            />
+            <img
+              src="./img/pictures/galery/pic14.jpg"
+              class="img-galeria"
+              alt=""
+            />
+          </div>
         </div>
-      </div>
-      <!-- <section class="imagen-light">
-        <img src="./img/icons/bx-x.svg" alt="" class="close" />
+      </section>
+      <div class="imagen-light">
+        <img src="img/close.svg" alt="" class="close" />
         <img src="" alt="" class="agregar-imagen" />
-      </section> -->
+      </div>
+      <section class="contenedor" id="expertos">
+        <h2 class="subtitulo">Expertos en:</h2>
+        <section class="experts">
+          <div class="cont-expert">
+            <img src="img/pie_chart.svg" alt="" />
+            <h3 class="n-expert">Analytics</h3>
+          </div>
+          <div class="cont-expert">
+            <img src="img/search_engine.svg" alt="" />
+            <h3 class="n-expert">SEO</h3>
+          </div>
+          <div class="cont-expert">
+            <img src="img/security.svg" alt="" />
+            <h3 class="n-expert">Security</h3>
+          </div>
+        </section>
+      </section>
     </main>
-    <footer id="contacto">
+
+    <footer id="footer">
       <div class="contenedor footer-content">
         <div class="contact-us">
-          <h2 class="brand">Villa Mercedes Running Team</h2>
-          <p>Somos un equipo que amamos lo que hacemos</p>
+          <h2 class="brand">Somos gran Equipo</h2>
+          <p>Amamos lo que hacemos</p>
         </div>
         <div class="social-media">
           <a
@@ -95,21 +125,22 @@
             <i class="bx bxl-facebook"></i>
           </a>
           <a
-            href="https://www.instagram.com/villa.mercedes.running.team/"
-            class="social-media-icon"
-          >
-            <i class="bx bxl-instagram-alt"></i>
-          </a>
-          <a
             href="https://api.whatsapp.com/send?phone=5492657584341&text=Hola%20Me%20Gustaria%20obtener%20informacion%20sobre%20el%20grupo"
             class="social-media-icon"
           >
-            <i class="bx bxl-whatsapp-square"></i>
+            <i class="bx bxl-whatsapp"></i>
+          </a>
+          <a
+            href="https://www.instagram.com/villa.mercedes.running.team/"
+            class="social-media-icon"
+          >
+            <i class="bx bxl-instagram"></i>
           </a>
         </div>
       </div>
+      <div class="line"></div>
     </footer>
-    <script src="./Js/lightbox.js"></script>
-    <script src="./Js/menu.js"></script>
+    <script src="js/menu.js"></script>
+    <script src="js/lightbox.js"></script>
   </body>
 </html>
