--- a/web/index.html
+++ b/web/index.html
@@ -20,7 +20,7 @@
       <nav class="menu-navegacion">
         <a href="#inicio">Inicio</a>
         <a href="#servicio">Servicio</a>
-        <a href="#galeria">Portafolio</a>
+        <a href="#galeria">Galeria</a>
         <a href="#expertos">Especializados</a>
         <a href="#footer">Contacto</a>
       </nav>
