--- a/web/index.html
+++ b/web/index.html
@@ -19,9 +19,9 @@
       <img class="hamburguer" src="img/hamburguesa.svg" alt="" />
       <nav class="menu-navegacion">
         <a href="#inicio">Inicio</a>
-        <a href="#servicio">Servicio</a>
+        <a href="#servicio">Nosotros</a>
         <a href="#galeria">Galeria</a>
-        <a href="#expertos">Especializados</a>
+        <a href="#expertos">Ofrecemos</a>
         <a href="#footer">Contacto</a>
       </nav>
       <div class="contenedor head">
@@ -93,19 +93,19 @@
         <img src="" alt="" class="agregar-imagen" />
       </div>
       <section class="contenedor" id="expertos">
-        <h2 class="subtitulo">Expertos en:</h2>
+        <h2 class="subtitulo">Ofrecemos :</h2>
         <section class="experts">
           <div class="cont-expert">
             <img src="img/pie_chart.svg" alt="" />
-            <h3 class="n-expert">Analytics</h3>
+            <h3 class="n-expert">Planificacion Personalizada</h3>
           </div>
           <div class="cont-expert">
             <img src="img/search_engine.svg" alt="" />
-            <h3 class="n-expert">SEO</h3>
+            <h3 class="n-expert">Acompañamiento al Atleta</h3>
           </div>
           <div class="cont-expert">
             <img src="img/security.svg" alt="" />
-            <h3 class="n-expert">Security</h3>
+            <h3 class="n-expert">Equipo Interdisciplinario</h3>
           </div>
         </section>
       </section>
