--- a/web/index.html
+++ b/web/index.html
@@ -26,7 +26,7 @@
       </nav>
       <div class="contenedor head">
         <h1 class="titulo">Desafia Tus Propios Limites</h1>
-        <p class="copy">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+        <p class="copy">“Haz cada día un poco más de lo que crees que puedes hacer.”</p>
       </div>
     </header>
     <main>
@@ -140,7 +140,7 @@
       </div>
       <div class="line"></div>
     </footer>
-    <script src="js/menu.js"></script>
-    <script src="js/lightbox.js"></script>
+    <script src="Js/menu.js"></script>
+    <script src="Js/lightbox.js"></script>
   </body>
 </html>
